# refrain-engine

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md  deny.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/refrain-adapters/: Cargo.toml
crates/refrain-adapters/src/: audio.rs  code.rs  lib.rs  schedule.rs  text.rs  visual.rs
crates/refrain-adapters/tests/: integration.rs  properties.rs  sha256_golden.rs
crates/refrain-core/: Cargo.toml
crates/refrain-core/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/refrain-core/tests/: fixtures.rs  properties.rs
crates/refrain-egraph/: Cargo.toml
crates/refrain-egraph/src/: lib.rs
crates/refrain-egraph/tests/: property.rs
crates/refrain-ffi/: Cargo.toml
crates/refrain-ffi/src/: lib.rs
crates/refrain-rhizome/: Cargo.toml
crates/refrain-rhizome/src/: lib.rs
crates/refrain-rhizome/tests/: properties.rs
docs/: risks.md  roadmap.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  adapters.md  api.md  architecture.md  dsl.md  intro.md  philosophy.md  risks.md
examples/: README.md
python/intensity_plane/: __init__.py  autodiff.py  complex.py  ehrhard.py
python/refrain_py/: __init__.py
python/tests/: test_autodiff.py  test_complex.py  test_ehrhard.py  test_hypothesis_more.py  test_native_bridge.py
scripts/: release.sh
tests/: README.md
