[workspace]
resolver = "2"
members = [
    "crates/refrain-core",
    "crates/refrain-egraph",
    "crates/refrain-rhizome",
    "crates/refrain-ffi",
    "crates/refrain-adapters",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["runza"]
repository = "https://github.com/hinanohart/refrain-engine"
description = "Differential Refrain Engine — unified time-pattern DSL"
readme = "../../README.md"
keywords = ["dsl", "egraph", "autodiff", "crdt", "live-coding"]
categories = ["compilers", "multimedia"]

[workspace.dependencies]
# Phase 2-4 (core)
# Note: parser is hand-rolled (no chumsky dep). Equality saturation uses
# `egg` (the foundation of egglog); full egglog Datalog rules are deferred
# to v0.2 — egg covers all v0.1 rewrite needs with a stabler API surface.
egg = "0.11"
# Phase 6 (audio adapter): OSC encoding via rosc (MIT, single-crate, no
# transitive deps beyond byteorder).
rosc = "0.11"
# Phase 7 (visual adapter): PNG encoding via the `png` crate (MIT/Apache-2.0,
# pure Rust, deterministic output for SHA-256 golden testing).
png = "0.17"
# Phase 5 (FFI)
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
arrow = "53"
# Phase 10 (rhizome, optional)
loro = "1.0.0-beta.5"
# Cross-crate
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }

# Dev
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true