[package]
name = "refrain-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Differential Refrain Engine: output adapters (audio, visual, code, text)"
keywords.workspace = true
categories.workspace = true

[lib]
name = "refrain_adapters"
path = "src/lib.rs"

[dependencies]
refrain-core = { path = "../refrain-core", version = "0.1.0" }
png = { workspace = true }
rosc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
refrain-egraph = { path = "../refrain-egraph", version = "0.1.0" }
proptest = { workspace = true }
sha2 = "0.10"
