[package]
name = "refrain-egraph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Differential Refrain Engine: egglog rewrite engine bindings"
keywords.workspace = true
categories.workspace = true

[lib]
name = "refrain_egraph"
path = "src/lib.rs"

[dependencies]
refrain-core = { path = "../refrain-core" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
