[package]
name = "refrain-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Differential Refrain Engine: PyO3 bridge for refrain_py._native"
keywords.workspace = true
categories.workspace = true

[lib]
name = "refrain_ffi"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
refrain-core = { path = "../refrain-core", version = "0.1.0" }
refrain-egraph = { path = "../refrain-egraph", version = "0.1.0" }
pyo3 = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
